--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,7 @@ line-height: 18px;
 
 /*------------- CSS for cards ---------------*/
 
-.about-container {
+.card-container {
     display: flex;
     flex-direction: column;
 }
@@ -69,6 +69,7 @@ h1 {
     font-size: 20px;
     margin-left: 44px;
     margin-bottom: 0px;
+    margin-top: 30px;
 }
 
 .yellowLine {
@@ -103,4 +104,15 @@ h2 {
     font-family: Poppins;
     font-weight: 500;
     font-size: 14px;
+    margin-bottom: 30px;
 }
+
+.specialist-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #F7EEE7;
+    margin-top: 30px;
+    padding-top: 20px;
+}
+
+
