--- a/components/header.module.css
+++ b/components/header.module.css
@@ -15,7 +15,7 @@
 .logo {
     width: 90px;
     height: 90px;
-    margin-left: -5px;
+    margin-left: -0.2em;
 }
 
 .apikoContainer {
@@ -50,7 +50,7 @@
 .navbarContainer {
     cursor: pointer;
     margin-left: auto;
-    margin-right: 19px;
+    margin-right: 1.2em;
 }
 
 .bar1, .bar2, .bar3 {
@@ -58,6 +58,11 @@
     height: 2px;
     background-color: #404040;
     margin: 10px 0;
+  }
+
+  .headerContainer  a {
+      color: #373737;
+      text-decoration: none;
   }
 
 
